tests/baselines/reference/inheritanceStaticFuncOverridingAccessor.errors.txt
tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts(2,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts(5,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts(10,7): error TS2417: Class static side '类为 b' incorrectly extends base class static side '类为 a'.
  Types of property 'x' are incompatible.
    Type '() => 文字' is not assignable to type '文字'.


==== tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts (3 errors) ====
    class a {
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        static set x(aValue: string) {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side '类为 b' incorrectly extends base class static side '类为 a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type '() => 文字' is not assignable to type '文字'.
        static x() {
            return "20";
        }
    }